--- a/App/style/loading.css
+++ b/App/style/loading.css
@@ -22,6 +22,24 @@
     }
 }
 
+.loading svg:nth-child(1){
+    position: absolute;
+}
+.loading svg:nth-child(1) path{
+    fill: none;
+    stroke: #ffffff;
+    stroke-width: 8px;
+    stroke-dasharray: 5500;
+    stroke-dashoffset: 5500;
+    animation: strokeoffset 5s linear forwards;
+}
+
+@keyframes strokeoffset {
+    to {
+        stroke-dashoffset: 0;
+    }
+}
+
 .loading.loaded{
     filter: invert(0.04);
     animation-name: logoLoaded;
