--- a/App/style/app.css
+++ b/App/style/app.css
@@ -320,6 +320,8 @@ modal{
     border-radius: 8px;
     background-color: #050505;
     border: 2px solid #555;
+    height: 52px;
+    overflow: hidden;
 }
 .expandableBox *{
     vertical-align: middle;
@@ -336,6 +338,7 @@ modal{
 }
 .expandableBox.expanded{
     height: 300px;
+    overflow: auto;
 }
 .expandableBox.expanded i:first-child{
     transform: rotate(90deg);
@@ -398,6 +401,51 @@ modal{
         opacity: 1;
     }
 }
+
+
+.contextMenu{
+    position: absolute;
+    overflow: auto;
+    z-index: 50;
+    
+    color: #eee;
+    background: #222;
+    box-shadow: 1px 1px 3px #111;
+    border: 1px solid #444;
+    border-radius: 12px;
+    
+    padding: 12px;
+    
+    
+    animation-name: contextMenu;
+    animation-duration: .2s;
+    animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.contextMenu.hide{
+    animation-name: contextMenuReverse;
+    animation-fill-mode: forwards;
+}
+
+@keyframes contextMenu {
+    from{
+        transform: translateY(-5px);
+        opacity: 0;
+    }
+}
+
+@keyframes contextMenuReverse {
+    to{
+        transform: translateY(-5px);
+        opacity: 0;
+    }
+}
+
+.contextMenu .btn{
+    display: block;
+}
+
+
 
 /* md style */
 input.md{
