--- a/App/style/app.css
+++ b/App/style/app.css
@@ -195,7 +195,7 @@ input{
     color: #999;
     font-size: 14px;
 }
-.contextmenu p, .contextmenu pr{
+.contextmenu .btn, .contextmenu .btnr{
     white-space: nowrap;
     display: block;
     cursor: pointer;
@@ -204,32 +204,32 @@ input{
     padding: 8px;
     transition: .2s;
 }
-.contextmenu p i, .contextmenu pr i{
+.contextmenu .btn i, .contextmenu .btnr i{
     font-size: 20px;
     float: left;
     padding-right: 6px;
     margin-top: -1px;
 }
-.contextmenu p:hover, .contextmenu p:focus-visible{
+.contextmenu .btn:hover, .contextmenu .btn:focus-visible{
     background: #444;
 }
-.contextmenu p:active{
+.contextmenu .btn:active{
     color: #111;
     background: #eee;
 }
-.contextmenu p.disabled{
+.contextmenu .btn.disabled{
     pointer-events: none;
     color: #555;
     background: #222;
 }
-.contextmenu pr.heading{
+.contextmenu .btnr.heading{
     color: #bbb;
 }
-.contextmenu pr{
+.contextmenu .btnr{
     cursor: initial;
     user-select: text;
 }
-.contextmenu pr i{
+.contextmenu .btnr i{
     pointer-events: none;
     user-select: none;
 }
@@ -441,10 +441,74 @@ modal{
     }
 }
 
-.contextMenu .btn{
-    display: block;
+.contextmenu::-webkit-scrollbar-thumb{
+    border-radius: 8px;
 }
-
+.contextmenu input{
+    padding: 6px 0 0 0;
+    width: 100%;
+    padding: 6px;
+    background: #111;
+    border-radius: 4px;
+    border-bottom: 1px solid #444;
+    transition: .1s;
+}
+.contextmenu input:hover{
+    background: #151515;
+    border-bottom: 1px solid #555;
+}
+.contextmenu input:focus{
+    border-bottom: 1px solid #999;
+}
+.contextmenu de{
+    display: block;
+    margin: 9px 0;
+    color: #999;
+    font-size: 14px;
+}
+.contextmenu .btn, .contextmenu .text{
+    white-space: nowrap;
+    display: block;
+    cursor: pointer;
+    user-select: none;
+    border-radius: 8px;
+    padding: 8px;
+    transition: .2s;
+}
+.contextmenu .btn i, .contextmenu .text i{
+    font-size: 20px;
+    float: left;
+    padding-right: 6px;
+    margin-top: -1px;
+}
+.contextmenu .btn:hover, .contextmenu .btn:focus-visible{
+    background: #444;
+}
+.contextmenu .btn:active{
+    color: #111;
+    background: #eee;
+}
+.contextmenu .btn.disabled{
+    pointer-events: none;
+    color: #555;
+    background: #222;
+}
+.contextmenu .text.heading{
+    color: #bbb;
+}
+.contextmenu .text{
+    cursor: initial;
+    user-select: text;
+}
+.contextmenu .text i{
+    pointer-events: none;
+    user-select: none;
+}
+.contextmenu hr{
+    border: 0;
+    border-top: 1px solid #555;
+    margin: 5px;
+}
 
 
 /* md style */
