--- a/App/style/app.css
+++ b/App/style/app.css
@@ -145,128 +145,6 @@ input{
 }
 
 
-.contextmenu.transition{
-    transform: translateY(-5px);
-    opacity: 0;
-}
-.contextmenu{
-    position: absolute;
-    overflow: auto;
-    /* width: 150px; */
-    z-index: 50;
-    color: #eee;
-    background: #222;
-    box-shadow: 1px 1px 3px #111;
-    border-radius: 12px;
-    border: 1px solid #444;
-    padding: 12px;
-    transition: .2s;
-}
-.contextmenu::-webkit-scrollbar-thumb{
-    border-radius: 8px;
-}
-.contextmenu.mobile{
-    width: 100%;
-    max-width: 400px;
-    height: 250px;
-    overflow: auto;
-    bottom: 200px;
-    border-radius: 14px 14px 0 0;
-}
-.contextmenu input{
-    padding: 6px 0 0 0;
-    width: 100%;
-    padding: 6px;
-    background: #111;
-    border-radius: 4px;
-    border-bottom: 1px solid #444;
-    transition: .1s;
-}
-.contextmenu input:hover{
-    background: #151515;
-    border-bottom: 1px solid #555;
-}
-.contextmenu input:focus{
-    border-bottom: 1px solid #999;
-}
-.contextmenu de{
-    display: block;
-    margin: 9px 0;
-    color: #999;
-    font-size: 14px;
-}
-.contextmenu .btn, .contextmenu .btnr{
-    white-space: nowrap;
-    display: block;
-    cursor: pointer;
-    user-select: none;
-    border-radius: 8px;
-    padding: 8px;
-    transition: .2s;
-}
-.contextmenu .btn i, .contextmenu .btnr i{
-    font-size: 20px;
-    float: left;
-    padding-right: 6px;
-    margin-top: -1px;
-}
-.contextmenu .btn:hover, .contextmenu .btn:focus-visible{
-    background: #444;
-}
-.contextmenu .btn:active{
-    color: #111;
-    background: #eee;
-}
-.contextmenu .btn.disabled{
-    pointer-events: none;
-    color: #555;
-    background: #222;
-}
-.contextmenu .btnr.heading{
-    color: #bbb;
-}
-.contextmenu .btnr{
-    cursor: initial;
-    user-select: text;
-}
-.contextmenu .btnr i{
-    pointer-events: none;
-    user-select: none;
-}
-.contextmenu hr{
-    border: 0;
-    border-top: 1px solid #555;
-    margin: 5px;
-}
-.contextmenu horizontalbtns{
-    display: flex;
-    justify-content: space-around;
-}
-.contextmenu horizontalbtns i{
-    user-select: none;
-    cursor: pointer;
-    background: #333;
-    padding: 4px;
-    border-radius: 4px;
-    transition: .2s;
-}
-.contextmenu horizontalbtns i:hover, .contextmenu horizontalbtns i:focus-visible{
-    background: #444;
-    box-shadow: 0 3px 0 #333;
-    transform: translateY(-3px);
-}
-.contextmenu horizontalbtns i:active{
-    transition: .05s;
-    color: #111;
-    background: #eee;
-    box-shadow: initial;
-    transform: initial;
-}
-.contextmenu horizontalbtns i.active{
-    background: #885cff;
-    color: #fff;
-}
-
 mselect{
     position: relative;
     user-select: none;
@@ -320,8 +198,12 @@ modal{
     border-radius: 8px;
     background-color: #050505;
     border: 2px solid #555;
-    height: 52px;
+    max-height: 52px;
+    transition: max-height .2s; /* Weird copy btn visual glitch */
     overflow: hidden;
+}
+.expandableBox:focus-visible{
+    border: 2px solid #bbb;
 }
 .expandableBox *{
     vertical-align: middle;
@@ -337,7 +219,7 @@ modal{
     right: 3px;
 }
 .expandableBox.expanded{
-    height: 300px;
+    max-height: 300px;
     overflow: auto;
 }
 .expandableBox.expanded i:first-child{
@@ -441,10 +323,10 @@ modal{
     }
 }
 
-.contextmenu::-webkit-scrollbar-thumb{
+.contextMenu::-webkit-scrollbar-thumb{
     border-radius: 8px;
 }
-.contextmenu input{
+.contextMenu input{
     padding: 6px 0 0 0;
     width: 100%;
     padding: 6px;
@@ -453,20 +335,23 @@ modal{
     border-bottom: 1px solid #444;
     transition: .1s;
 }
-.contextmenu input:hover{
+.contextMenu input:hover{
     background: #151515;
     border-bottom: 1px solid #555;
 }
-.contextmenu input:focus{
+.contextMenu input:focus{
     border-bottom: 1px solid #999;
 }
-.contextmenu de{
+.contextMenu de{
     display: block;
     margin: 9px 0;
     color: #999;
     font-size: 14px;
 }
-.contextmenu .btn, .contextmenu .text{
+.contextMenu .btn, .contextMenu .text{
+    color: inherit;
+    background: inherit;
+    border: initial;
     white-space: nowrap;
     display: block;
     cursor: pointer;
@@ -475,39 +360,97 @@ modal{
     padding: 8px;
     transition: .2s;
 }
-.contextmenu .btn i, .contextmenu .text i{
-    font-size: 20px;
-    float: left;
-    padding-right: 6px;
-    margin-top: -1px;
-}
-.contextmenu .btn:hover, .contextmenu .btn:focus-visible{
+.contextMenu .btn:hover, .contextMenu .btn:focus-visible{
     background: #444;
 }
-.contextmenu .btn:active{
+.contextMenu .btn:active{
     color: #111;
     background: #eee;
 }
-.contextmenu .btn.disabled{
+.contextMenu .btn.disabled{
     pointer-events: none;
     color: #555;
     background: #222;
 }
-.contextmenu .text.heading{
-    color: #bbb;
-}
-.contextmenu .text{
+.contextMenu .text{
+    color: #ddd;
     cursor: initial;
     user-select: text;
 }
-.contextmenu .text i{
+.contextMenu .text i{
     pointer-events: none;
     user-select: none;
 }
-.contextmenu hr{
+.contextMenu .hr{
     border: 0;
     border-top: 1px solid #555;
     margin: 5px;
+}
+.contextMenu .extra{
+    cursor: pointer;
+    user-select: none;
+    padding: 8px;
+}
+.contextMenu .extra i:last-child{
+    position: absolute;
+    right: 8px;
+    left: initial;
+    transition: .2s;
+}
+.contextMenu .extra:hover i:last-child{
+    /* right: 6px; */
+    transform: scaleX(-1)translateY(-50%);
+}
+
+.contextMenu.submenu{
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 52;
+    visibility: hidden;
+    box-shadow: 1px 1px 4px 1px #111;
+}
+
+.contextMenu.submenu.visible{
+    opacity: 1;
+    visibility: visible;
+    animation-name: submenuAppear;
+    animation-duration: .2s;
+    animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.contextMenu.submenu.hide{
+    animation-name: submenuAppearReverse;
+}
+@keyframes submenuAppear {
+    from{
+        opacity: .2;
+        transform: translateX(-8px);
+    }
+    to{
+        transform: initial;
+    }
+}
+@keyframes submenuAppearReverse {
+    to{
+        opacity: 0;
+        transform: translateX(-8px);
+    }
+    from{
+        transform: initial;
+    }
+}
+
+.contextMenu .i{
+    position: relative;
+    padding-left: 36px;
+}
+.contextMenu .i i{
+    position: absolute;
+    left: 8px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 
