--- a/App/style/header.css
+++ b/App/style/header.css
@@ -185,7 +185,26 @@ header .infotainment{
     float: right;
 }
 
+header .profile .line{
+    position: absolute;
+    right: 36px;
+    top: 36px;
+    display: block;
+    width: 12px;
+    height: 12px;
+    background-color: #555555;
+    border-radius: 99px;
+    box-shadow: 1px -1px 1px 1px #111111bb;
+}
+
+header .profile.online .line{
+    background-color: #58da97;
+}
+header .profile.offline .line{
+    background-color: #723030;
+}
 header .profile{
+    position: relative;
     display: inline-block;
     cursor: pointer;
     color: #eee;
