Added sorting fixed note data added on to context menus

--- a/App/style/app.css
+++ b/App/style/app.css
@@ -381,6 +381,10 @@ modal{
     color: #555;
     background: #222;
 }
+.contextMenu .selected{
+    color: #111;
+    background: #65baff;
+} 
 .contextMenu .text{
     color: #ddd;
     cursor: initial;
