Fixed weather bugs and created DevicesList Note There will be a lot of merges coming up soon since I am working on 2 devices on different features because of high school limiting me to only my laptop and not my desktop.
Changes

Added devices' Side element top to notes' side
Fixed a bug in weather info only showing the first digit instead of the whole number
Fixed a bug where it didn't say anything at 13:00 o' clock
Centered the "+ Create new" button in notes' side
Created DevicesList and worked on it being updated, it's not finished since the structure is weird

--- a/App/style/welcome.css
+++ b/App/style/welcome.css
@@ -455,27 +455,12 @@
     color: #111;
 }
 .welcome .notes .create{
-    /* width: 139px;
-    height: 79px; */
     border: 1px solid #333;
     background: initial;
-    /* padding: 28px 12px; */
     padding: 12px;
-    vertical-align: middle;
-}
-.welcome .notes .create i{
-    vertical-align: middle;
-}
-.welcome .notes .create p{
-    position: absolute;
-    top: 50%;
-    padding-left: 26px;
-    transform: translateY(-50%);
-}
-.welcome .notes .create p i{
-    position: absolute;
-    left: 0;
-    transform: translateY(-3px);
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
 }
 
 .welcome.loaded .notes .note{
