--- a/App/style/welcome.css
+++ b/App/style/welcome.css
@@ -224,7 +224,7 @@
     background: #222; */
     border-radius: 12px;
     padding: 12px;
-    font-size: 20px;
+    font-size: 18px;
     margin-right: 16px;
     animation-duration: 1s;
     animation-timing-function: cubic-bezier(.9, -.2, .2, 1);
@@ -461,21 +461,11 @@
     background: initial;
     /* padding: 28px 12px; */
     padding: 12px;
-    vertical-align: middle;
-}
-.welcome .notes .create i{
-    vertical-align: middle;
-}
-.welcome .notes .create p{
-    position: absolute;
-    top: 50%;
-    padding-left: 26px;
-    transform: translateY(-50%);
-}
-.welcome .notes .create p i{
-    position: absolute;
-    left: 0;
-    transform: translateY(-3px);
+
+    gap: 4px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .welcome.loaded .notes .note{
