--- a/App/style/welcome.css
+++ b/App/style/welcome.css
@@ -224,7 +224,9 @@
     background: #222; */
     border-radius: 12px;
     padding: 12px;
-    font-size: 18px;
+    font-size:  18px;
+    vertical-align: middle;
+    height: 45px;
     margin-right: 16px;
     animation-duration: 1s;
     animation-timing-function: cubic-bezier(.9, -.2, .2, 1);
@@ -251,7 +253,9 @@
     padding: 12px;
     border-radius: 12px;
     width: 200px;
+    height: 45px;
     text-align: center;
+    vertical-align: middle;
 }
 
 
@@ -560,21 +564,80 @@ background: linear-gradient(90deg, rgba(107,99,251,1) 0%, rgba(152,36,211,1) 66%
 
 }
 
+.deviceInfo::before{
+    content: ' ';
+    position: absolute;
+    width: 100%;
+    height: 20px;
+    top: -20px;
+    left: 0;
+}
+
 .deviceInfo{
     z-index: 9;
     position: absolute;
-    color: #bbb;
-    background-color: #292929;
+    
+    color: #eee;
+    background: #222;
+    box-shadow: 1px 1px 3px #111;
+    border: 1px solid #444;
+    border-radius: 12px;
+    
+    padding: 12px;
+
+
     left: 0;
     top: 0;
-    /* width: 200px;
-    height: 100px; */
+    min-width: 200px;
+    /* height: 100px; */
 
     transform: translateY(8px);
     opacity: 0;
-    transition: .2s;
+    transition: transform .2s, opacity .2s;
 }
 .deviceInfo.show{
     transform: initial;
     opacity: 1;
+}
+.deviceInfo .btn{
+    color: inherit;
+    background: inherit;
+    border: initial;
+    white-space: nowrap;
+    display: block;
+    cursor: pointer;
+    user-select: none;
+    border-radius: 8px;
+    padding: 8px;
+    transition: .2s;
+}
+.deviceInfo .btn:hover, .deviceInfo .btn:focus-visible{
+    background: #444;
+}
+.deviceInfo .btn:active{
+    color: #111;
+    background: #eee;
+}
+.deviceInfo .btn{
+    position: relative;
+    padding-left: 36px;
+}
+.deviceInfo .btn i{
+    position: absolute;
+    left: 8px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.deviceInfo .logout{
+    color: #F35959;
+}
+
+.deviceInfo .caret{
+    top: -9.5px;
+    position: absolute;
+    width: 0; 
+    height: 0; 
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-bottom: 9px solid #444;
 }
