--- a/App/style/header.css
+++ b/App/style/header.css
@@ -229,6 +229,33 @@ header .profile img{
     box-shadow: -2px 0 2px #111111bb;
 }
 
+header .weather{
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    color: #eee;
+    background-color: #222222bb;
+    background-size: cover;
+    margin-right: 8px;
+    border-radius: 99px;
+    min-width: 80px;
+    text-align: center;
+
+    transition: .1s;
+}
+header .weather div{
+    padding: 15px;
+    width: 100%;
+    height: 100%;
+    border-radius: 99px;
+    background: #00000099;
+    transition: .2s;
+}
+header .weather:hover div, header .weather:focus-visible div{
+    background: #00000011;
+    text-shadow: 1px 1px 2px #000, 0 0 1em #000, 0 0 0.2em #000;
+}
+
 header .showSubHeader{
     display: none;
 }
