--- a/App/style/app.css
+++ b/App/style/app.css
@@ -526,3 +526,41 @@ input.md{
     background-color: #050505;
     border: 2px solid #555;
 }
+
+.mdblock {
+    width: 90%;
+    /* padding-right: 15px;
+	padding-left: 15px; */
+    margin-right: auto;
+    margin-left: auto;
+}
+
+@media (min-width: 576px) {
+    .mdblock {
+        max-width: 540px;
+    }
+}
+
+@media (min-width: 768px) {
+    .mdblock {
+        max-width: 720px;
+    }
+}
+
+@media (min-width: 992px) {
+    .mdblock {
+        max-width: 960px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .mdblock {
+        max-width: 1140px;
+    }
+}
+
+@media (min-width: 1400px) {
+    .mdblock {
+        max-width: 1340px;
+    }
+}
