Added Relog and mobile, vertical, screen support Changes
Made a wavy up and down animation on unlogged welcome screen
Moving all header menus from header.js and project.js to headermenus.js for modularity
Made server login system changes, now when security alert is detected (change in variables) you will be prompted to sign in again and the username will be displayed, only password is required
Relog functionality is unfinished, don't have the circumstances to finish it surely, nevermind it worked
On loadWelcome it now clears the welcome element of previous menus for the relog, I should add an animation

--- a/App/style/header.css
+++ b/App/style/header.css
@@ -267,6 +267,9 @@ header.noSubHeader .showSubHeader{
     padding: 4px;
 }
 @media screen and (max-width: 590px) {
+    header .noteList .note .x{
+        display: none;
+    }
     header .noteList .note:not(.active){
         display: none;
     }
