Smooth error animations and mobile screens Changes
Added SMOOTH like butter animations on password errors
Fixed on mobile screens weather and user halves
Started working on mobile menu when clicking on the active note

--- a/App/style/header.css
+++ b/App/style/header.css
@@ -350,6 +350,10 @@ header.noSubHeader .showSubHeader{
     }
 }
 
+.headerDropdown .mobile{
+    display: none;
+}
+
 .noteExtraInfo{
     min-width: 260px;
     max-width: 350px;
@@ -374,3 +378,25 @@ header.noSubHeader .showSubHeader{
     display: inline;
     vertical-align: middle;
 }
+
+@media screen and (max-width: 590px){
+    .headerDropdown{
+        left: 0!important;
+        width: 100%;
+    }
+    .headerDropdown .mobile{
+        display: initial;
+    }
+    .headerDropdown .opennotes{
+        font-size: 20px;
+    }
+    .noteExtraInfo{
+        min-width: initial;
+        max-width: initial;
+        width: 100%;
+    }
+    .noteExtraInfo .btn{
+        display: inline-block;
+        margin: 0;
+    }
+} 
