--- a/App/style/welcome.css
+++ b/App/style/welcome.css
@@ -208,9 +208,11 @@
         max-height: 95%;
     }
     .welcome .userHalf, .welcome .weatherHalf{
-        position: initial;
+        position: relative;
         display: block;
-        width: 100%;
+        width: calc(100% + 24px);
+        margin-left: -12px;
+        min-height: 90px;
         float: initial;
         height: initial;
     }
@@ -835,11 +837,13 @@ background: linear-gradient(90deg, rgba(107,99,251,1) 0%, rgba(152,36,211,1) 66%
     color: #F35959;
 }
 .welcome .password .text span{
+    display: inline-block;
     position: absolute;
     left: 0;
     margin-left: 0;
     width: 300px;
     bottom: -55px;
+    transition: .3s;
 }
 .welcome .password .text span:nth-child(2){
     bottom: -75px;
@@ -850,6 +854,10 @@ background: linear-gradient(90deg, rgba(107,99,251,1) 0%, rgba(152,36,211,1) 66%
     margin-left: 6px;
     width: initial;
     bottom: initial;
+}
+.welcome .password .text span.hide{
+    transform: translateX(-6px);
+    opacity: 0;
 }
 
 .welcome .password input{
