--- a/App/style/project.css
+++ b/App/style/project.css
@@ -1,29 +1,79 @@
 .createNew{
-    min-width: 600px;
-    min-height: 400px;
+    width: 100%;
+    /* height: 100%; */
+    max-width: 600px;
+    /* max-height: 400px; */
     background: #111;
     color: #ddd;
 
     border-radius: 12px;
+    padding: 24px;
 }
 
+.createNew .header{
+    text-align: center;
+    padding: 2px 0;
+    font-size: 20px;
+}
+
+.createNew label{
+    margin: 0 10px;
+    width: 100%;
+}
+.createNew label input{
+    width: 100%;
+    padding: 8px;
+    background-color: #222;
+    border: 1px solid #333;
+    border-radius: 4px;
+}
+
+.createNew p{
+    margin: 10px 0;
+}
 
 .createNew .filetypes{
     display: flex;
     justify-content: space-between;
+    gap: 8px;
 }
 
 .createNew .filetype{
     cursor: pointer;
     user-select: none;
     
+    border: 2px solid #1c1c1c;
     background: #1c1c1c;
     padding: 12px;
     border-radius: 12px;
     transition: .2s;
 }
 
+.createNew .filetype .description{
+    font-size: 12px;
+    color: #999;
+    transition: .4s;
+}
+
+.createNew .filetype:hover{
+    border: 2px solid #666;
+}
+.createNew .filetype:active{
+    background: #666;
+}
+
 .createNew .filetype.active{
+    border: 2px solid #65baff;
     background: #65baff;
     color: #111;
+}
+.createNew .filetype.active .description{
+    color: #444;
+}
+
+.createNew .btn{
+    margin-top: 24px;
+    width: 50%;
+    margin-left: 25%;
+    text-align: center;
 }
